--- a/views/log_reg/login.ejs
+++ b/views/log_reg/login.ejs
@@ -105,7 +105,7 @@
             <!-- /Prijavi se-->    
             <br><br>
             <!-- Label za registraciju-->
-                <span>Još nemate nalog <a href = ''>registruj se besplatno!</a></span>
+                <span>Još nemate nalog <a href = ''>registrujte se ovde!</a></span>
             <!-- Label za registraciju-->
 
 
