--- a/views/poslovi/svi_poslovi.ejs
+++ b/views/poslovi/svi_poslovi.ejs
@@ -81,7 +81,7 @@
     <!-- Novi oglas-->
         <div class="row">
             <div class="col text-right h5 mr-4">
-                <a href = '' >
+                <a href = '/svi_poslovi/novi_posao' >
                     <i class="fa fa-plus text-success" aria-hidden="true"></i> 
                     <span class ='text-white'>Postavi novi oglas</span>
                 </a>
@@ -194,7 +194,7 @@
                        
                         <br>
                        
-                        <p><a href=""> Detaljnije...</a></p>
+                        <p><a href="/svi_poslovi/posao/<%-posao.id%>"> Detaljnije...</a></p>
                         
                     </p>
                    
@@ -205,11 +205,33 @@
                     
                     <!-- Prijava na poslu-->
                     <div class = 'text-right'>
-                        <p class ='text-secondary small'>Broj prijava : <%-posao.br_prijava%></p>
-                        <i class="fas fa-pen text-info mr-3"></i>
-                        <i class="fas fa-trash text-danger mr-3"></i>
-                        <a href = '' class='ml-3'> Prijavi se</a>
+
+                        <spann class ='text-secondary small text-right'>Broj prijava : <%-posao.br_prijava%></spann>
+                        <!-- Prijava -->
+                        <form class="form form-inline  justify-content-center d-flex">
+                           
+                            <button type="submit" class = 'btn btn-danger btn-sm' >Prijavi se</button>
+                        </form>
+                        <!-- /Prijava-->
+
+                        <!-- Brisanje i izmena -->
+                        <div class="justify-content-end d-flex"> 
+                            <!-- Izmena -->
+                            <a href="/svi_poslovi/posao/<%-posao.id%>/izmena_posla" class="btn"><i class="fas fa-pen text-info "></i></a>
+                            <!-- /Izmena-->
+
+                            <!-- Brisanje -->
+                            <form class = 'form form-inline'>
+                            
+                            <button type="submit" class="btn"><i class="fas fa-trash text-danger"></i> </button>
+                            </form>
+                            <!-- /Brisanje -->
+                        </div>
+                        <!-- /Brisanje i izmena -->
+
+                        
                     </div>
+                    <!-- /Prijava i izmena i brisanje posla --> 
                 </div>
               </div>
         </div>
