Brisanje posla omogučeno

--- a/views/poslovi/posao.ejs
+++ b/views/poslovi/posao.ejs
@@ -164,7 +164,7 @@
                                 <a href = '/svi_poslovi/posao/<%-posao[0].id%>/izmena_posla'class="btn"><i class="fas fa-pen text-info mr-1 "></i></a>
 
                                 <!-- Brisanje -->
-                                <form action="" method="POST" class=" form form-inline">
+                                <form action="/svi_poslovi/posao/<%-posao[0].id%>/brisanje_posla" method="POST" class=" form form-inline">
                                     <button type="submit" class="btn"><i class="fas fa-trash text-danger mr-3"></i></button>
                                 </form>
                                 <!-- /Brisanej i izmena-->
